fix: aligned chats inside widgetsChat__onlineBox

--- a/client/src/components/chat/WidgetMember.css
+++ b/client/src/components/chat/WidgetMember.css
@@ -11,7 +11,6 @@
     }
     .widgetsChat__onlineBox{
         display: flex;
-        justify-content: end;
         align-items: center;
         /* background-color: #1b1b1b; */
         border-radius: 0px;
@@ -35,7 +34,6 @@
     }
     .widgetsChat__onlineBox{
         display: flex;
-        justify-content: end;
         align-items: center;
         border-radius: 0px;
         height: 69px;
@@ -59,7 +57,7 @@
     }
     .widgetsChat__onlineBox{
         display: flex;
-        justify-content: end;
+        /* justify-content: end; */
         align-items: center;
         background-color: #1b1b1b;
         border-radius: 0px;
